even more alignment but issue persists

--- a/Source/Client/App.razor
+++ b/Source/Client/App.razor
@@ -1,8 +1,4 @@
-@namespace TimeWarp.Architecture.Components
-
-@inherits ComponentBase
-
-<Router AppAssembly="typeof(Web.Spa.Program).Assembly"  PreferExactMatches=@true>
+<Router AppAssembly="@typeof(App).Assembly">
   <Found Context="routeData">
     <RouteView RouteData=@routeData DefaultLayout=@typeof(MainLayout) />
     <FocusOnNavigate RouteData="@routeData" Selector="main" />
