--- a/Source/Client/_Imports.razor
+++ b/Source/Client/_Imports.razor
@@ -3,5 +3,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using System.Net.Http.Json
-@using TimeWarp.Architecture.Components
-@using TimeWarp.Architecture.Pages
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.JSInterop
+@using Pwa.Client
+@using Pwa.Client.Shared
