--- a/Source/Server/Pages/_Host.cshtml
+++ b/Source/Server/Pages/_Host.cshtml
@@ -1,7 +1,6 @@
 ﻿@page "/"
-@namespace TimeWarp.Architecture.Pages
+@namespace TestApp.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using TimeWarp.Architecture.Components
 
 <!DOCTYPE html>
 <html>
@@ -23,7 +22,7 @@
   <link rel="manifest" href="manifest.json" />
 </head>
 <body class="font-sans antialiased">
-  <div id="app">@(await Html.RenderComponentAsync<App>(RenderMode.Server))</div>
+  <div id="app">@(await Html.RenderComponentAsync<Pwa.Client.App>(RenderMode.Server))</div>
   <div id="blazor-error-ui" class="bg-yellow-100 bottom-0 left-0 fixed text-yellow-900 w-full z-50 pt-2.5 pr-5 pb-3 pl-5 border-t-2 border-yellow-800 hidden">
     <div class="flex justify-between">
       <span>An unhandled error has occurred. <a href="" class="underline cursor-pointer hover:no-underline">Reload</a></span>
