--- a/Source/Client/App.razor
+++ b/Source/Client/App.razor
@@ -1,7 +1,7 @@
 <Router AppAssembly="@typeof(App).Assembly">
   <Found Context="routeData">
     <RouteView RouteData=@routeData DefaultLayout=@typeof(MainLayout) />
-    <FocusOnNavigate RouteData="@routeData" Selector="main" />
+    <FocusOnNavigate RouteData="@routeData" Selector="h1" />
   </Found>
   <NotFound>
     <PageTitle>Not Found</PageTitle>
