--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/BlazorLocation.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/BlazorLocation.razor
@@ -1,6 +1,7 @@
 @namespace TimeWarp.Architecture.Components
 
-@using TimeWarp.Architecture.Features
+@using TimeWarp.Architecture.Features;
+@using TimeWarp.Architecture.Features.Base
 
 @inherits BaseComponent
 
