--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -6,4 +6,7 @@
 @using System.Net.Http.Json
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Features
+@using TimeWarp.Architecture.Features.Base
 @using TimeWarp.Architecture.Pages
+@using TimeWarp.Architecture.Features.Counters.Components
+@using TimeWarp.Architecture.Features.EventStreams
