--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -5,7 +5,11 @@
     <NavBarLink Href="#">Home</NavBarLink>
     <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
     <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
+    
+    @*#if (grpc)*@
     <NavBarLink Href=@SuperheroPage.GetRoute()>Superhero</NavBarLink>
+    @*#endif*@
+
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
     <NavBarLink Href="/api/web-server/swagger/" Target=NavBarLink.TargetValue._blank>Web-Server Docs</NavBarLink>
