--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -4,15 +4,19 @@
   <div class="flex">
     <NavBarLink Href="#">Home</NavBarLink>
     <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
+    @*#if (api)*@
     <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
-    
+    @*#endif*@
     @*#if (grpc)*@
     <NavBarLink Href=@SuperheroPage.GetRoute()>Superhero</NavBarLink>
     @*#endif*@
-
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
+    @*#if (web)*@
+    @*#endif*@
     <NavBarLink Href="/api/web-server/swagger/" Target=NavBarLink.TargetValue._blank>Web-Server Docs</NavBarLink>
+    @*#if (api)*@
     <NavBarLink Href="/api/api-server/swagger/" Target=NavBarLink.TargetValue._blank>Api-Server Docs</NavBarLink>
+    @*#endif*@
   </div>
 </div>
