Add counter and eventstream to the optional feature list
extract out the BaseComponent and BaseHandler partials for each Feature State

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -3,7 +3,9 @@
 <div class="hidden sm:block sm:ml-6">
   <div class="flex">
     <NavBarLink Href="#">Home</NavBarLink>
+    @*#if (counter)*@
     <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
+    @*#endif*@
     @*#if (api)*@
     <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
     @*#endif*@
