--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -8,5 +8,8 @@
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Features.Base
 @using TimeWarp.Architecture.Pages
-@using TimeWarp.Architecture.Features.Counters.Components
 @using TimeWarp.Architecture.Features.EventStreams
+
+@*#if(web && counter)*@
+@using TimeWarp.Architecture.Features.Counters.Components
+@*#endif*@
