change @page to @attribute to eliminate magic string... I would hope they would add the ability to use static constants with @page by now.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
@@ -1,5 +1,5 @@
 @namespace TimeWarp.Architecture.Pages
-@page "/Profile"
+@attribute [Route(ProfilePage.RouteTemplate)]
 @inherits BaseComponent
 
 <Page>
