--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -3,11 +3,13 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Morris.Blazor.ControlFlow
 @using System.Net.Http.Json
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Pages
 @using TimeWarp.Architecture.Features.EventStreams
+@using Toolbelt.Blazor.Splitter
 
 @*#if(web && counter)*@
 @using TimeWarp.Architecture.Features.Counters.Components
