Use Moxy Page Mixin to replace @page directive.  This is very nice.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/ChangePasswordPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/ChangePasswordPage.razor
@@ -1,7 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
-@page "/changePassword"
 @inherits BaseComponent
 
-<Page>
+<PageComponent>
   <HeaderContent>Change Password Page</HeaderContent>
-</Page>
+</PageComponent>
