--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/LogoutPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/LogoutPage.razor
@@ -1,7 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
-@page "/Logout"
 @inherits BaseComponent
 
-<Page>
+<PageComponent>
   <HeaderContent>Logout Page</HeaderContent>
-</Page>
+</PageComponent>
