--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
@@ -1,10 +1,7 @@
 @namespace TimeWarp.Architecture.Pages
-
-@page "/"
-
 @inherits BaseComponent
 
-<Page>
+<PageComponent>
   <HeaderContent>
     @ApplicationState.Name
   </HeaderContent>
@@ -37,4 +34,4 @@
       </div>
     </div>
   </MainContent>
-</Page>
+</PageComponent>
