--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/SuperheroPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/SuperheroPage.razor
@@ -1,8 +1,7 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
-@page "/Superheros"
 
-<Page>
+<PageComponent>
   <HeaderContent>Superheros</HeaderContent>
   <MainContent>
     @if (SuperheroState.Superheros == null)
@@ -37,5 +36,5 @@
     }
 
   </MainContent>
-</Page> 
+</PageComponent> 
 
