--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/WeatherForecast/Pages/WeatherForecastsPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/WeatherForecast/Pages/WeatherForecastsPage.razor
@@ -1,8 +1,7 @@
 @namespace TimeWarp.Architecture.Pages
-@page "/WeatherForecasts"
 @inherits BaseComponent
 
-  <Page>
+  <PageComponent>
     <HeaderContent>Weather Forecasts</HeaderContent>
     <MainContent>
       <p>This component demonstrates fetching data from the server.</p>
@@ -41,4 +40,4 @@
       }
 
     </MainContent>
-  </Page>
+  </PageComponent>
