--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
@@ -1,7 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
-@attribute [Route(ProfilePage.RouteTemplate)]
 @inherits BaseComponent
 
-<Page>
+<PageComponent>
   <HeaderContent>Profile Page</HeaderContent>
-</Page>
+</PageComponent>
