--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/SettingsPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/SettingsPage.razor
@@ -1,7 +1,6 @@
 ﻿@namespace TimeWarp.Architecture.Pages
-@page "/Settings"
 @inherits BaseComponent
 
-<Page>
+<PageComponent>
   <HeaderContent>Settings Page</HeaderContent>
-</Page>
+</PageComponent>
