--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -4,16 +4,16 @@
   <div class="flex">
     <NavBarLink Href="#">Home</NavBarLink>
     @*#if (counter)*@
-    <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
+    <NavBarLink Href=@CounterPage.GetPageUrl()>Counter</NavBarLink>
     @*#endif*@
     @*#if (eventStream)*@
-    <NavBarLink Href=@EventStreamPage.GetRoute()>Event Stream</NavBarLink>
+    <NavBarLink Href=@EventStreamPage.GetPageUrl()>Event Stream</NavBarLink>
     @*#endif*@
     @*#if (api)*@
-    <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
+    <NavBarLink Href=@WeatherForecastsPage.GetPageUrl()>Weather Forecasts</NavBarLink>
     @*#endif*@
     @*#if (grpc)*@
-    <NavBarLink Href=@SuperheroPage.GetRoute()>Superhero</NavBarLink>
+    <NavBarLink Href=@SuperheroPage.GetPageUrl()>Superhero</NavBarLink>
     @*#endif*@
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
