--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -1,12 +1,8 @@
 @namespace TimeWarp.Architecture.Pages
-
 @inherits BaseComponent
-
-@attribute [Route(CounterPage.RouteTemplate)]
-
 <PageTitle>Counter Page</PageTitle>
 
-<Page>
+<PageComponent>
   <HeaderContent>Counter Page</HeaderContent>
   <MainContent>
     <h1 class="text-2xl font-bold leading-tight text-gray-900">Counter Display 1</h1>
@@ -30,4 +26,4 @@
       Increment Count by 7 via JavaScript Interop
     </Button>
   </MainContent>
-</Page>
+</PageComponent>
