--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
@@ -13,7 +13,10 @@
       <div>
         @if (IsProcessing)
         {
-          <div style="border-top-color:transparent" class="w-6 h-6 border-4 border-solid rounded-full border-primary-400 animate-spin"></div>
+          <div
+            style="border-top-color:transparent"
+            class="w-6 h-6 border-4 border-solid rounded-full border-primary-400 animate-spin">
+          </div>
         }
       </div>
       <span>Version:@Version</span>
