Add a Chat link to NavBar.
Need to change to Tailwinds side layout but that will take some time and not priority.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -15,6 +15,7 @@
     @*#if (grpc)*@
     <NavBarLink Href=@SuperheroPage.GetPageUrl()>Superhero</NavBarLink>
     @*#endif*@
+    <NavBarLink Href=@ChatPage.GetPageUrl()>Chat</NavBarLink>
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
     @*#if (web)*@
