--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/Index.razor
@@ -35,6 +35,9 @@
       </div>
     </div>
   </MainContent>
+  <SideNavigationContent>
+    <div>Side Nav Content</div>
+  </SideNavigationContent>
 
   <ModalContent>
     <AboutModal/>
