Alignment from other app

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuPanel.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuPanel.razor
@@ -4,4 +4,5 @@
   <ProfileMenuNavLink href=@ProfilePage.GetPageUrl() role="menuitem">Your Profile</ProfileMenuNavLink>
   <ProfileMenuNavLink href=@SettingsPage.GetPageUrl() role="menuitem">Settings</ProfileMenuNavLink>
   <ProfileMenuNavLink href=@LogoutPage.GetPageUrl() role="menuitem">Sign out</ProfileMenuNavLink>
+  <ProfileMenuNavLink href=@LoginPage.GetPageUrl() role="menuitem">Sign in</ProfileMenuNavLink>
 </div>
