--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
@@ -6,21 +6,21 @@
     <HeaderContent>Chat</HeaderContent>
     <MainContent>
         <div class="form-group">
-          <label for="user">User</label>
+          <label for="user">Alias</label>
           <input type="text" class="form-control" id="user" @bind=User />
         </div>
         <div class="form-group">
           <label for="message">Message</label>
           <input type="text" class="form-control" id="message" @bind=Message @onkeydown=HandleKeyDown />
         </div>
-        <button class="btn btn-primary" @onclick=SendMessage>Send</button>
+        <Button Variant=Button.ButtonVariant.Default @onclick=SendMessage>Send</Button>
 
         <hr />
 
         <ul class="list-group">
             @foreach (var chatMessage in ChatMessages)
             {
-              <li class="list-group-item">@chatMessage</li>
+              <li class="list-group-item">@chatMessage.User: @chatMessage.Message</li>
             }
         </ul>
     </MainContent>
