--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
@@ -1,5 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Components
-@using static TimeWarp.Architecture.Features.Applications.Spa.ApplicationState;
+@using static TimeWarp.Architecture.Features.Applications.ApplicationState;
 @inherits BaseComponent
 
 @if (IsActive)
