Place holder stuff for ToDoItems

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Components/TodoItemForm.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Components/TodoItemForm.razor
@@ -8,5 +8,5 @@
 </EditForm>
 
 @code {
-  private UpdateTodoItemCommand UpdateTodoItemCommand { get; set; } = new();
+  private UpdateTodoItem.Command UpdateTodoItemCommand { get; set; } = new();
 }
