--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -10,6 +10,7 @@
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Features.ToDo
+@using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
 @using TimeWarp.Architecture.Features.EventStreams
 
