--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -9,6 +9,7 @@
 @using System.Net.Http.Json
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Features
+@using TimeWarp.Architecture.Features.Debugger.Components
 @using TimeWarp.Architecture.Features.ToDo
 @using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
