--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/Services.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/Services.razor
@@ -2,14 +2,7 @@
 
 <h1 class="text-xl font-bold">Registered Services</h1>
 
-<h2 class="text-lg font-bold mt-4">IPipelineBehavior</h2>
-<ServiceList Services="IPipelineBehaviors" />
-
-<h2 class="text-lg font-bold mt-4">IRequestPreProcessor</h2>
-<ServiceList Services="IRequestPreProcessors" />
-
-<h2 class="text-lg font-bold mt-4">IRequestPostProcessor</h2>
-<ServiceList Services="IRequestPostProcessors" />
-
-<h2 class="text-lg font-bold mt-4">IStreamPipelineBehavior</h2>
-<ServiceList Services="IStreamPipelineBehaviors" />
+<ServiceList Title="IPipelineBehavior" Services=IPipelineBehaviors />
+<ServiceList Title="IRequestPreProcessor" Services=IRequestPreProcessors />
+<ServiceList Title="IRequestPostProcessor" Services=IRequestPostProcessors />
+<ServiceList Title="IStreamPipelineBehavior" Services=IStreamPipelineBehaviors />
