--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Components/ServiceList.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Components/ServiceList.razor
@@ -1,21 +1,34 @@
-﻿<div class="grid grid-cols-1 gap-3 mt-2">
-    @foreach (var service in Services)
-    {
-        <div class="p-4 bg-white shadow-md rounded-lg">
-            <div class="text-gray-600 mb-2 text-lg font-semibold">@service.ServiceType</div>
-            <div class="flex justify-between text-gray-500 text-sm">
-                <div class="font-medium">Lifetime:</div>
-                <div class="font-semibold">@service.Lifetime</div>
+﻿<div class="mb-4">
+    <button class="text-lg font-bold" @onclick="ToggleCollapse">@Title</button>
+    <div class="grid grid-cols-1 gap-3 mt-2" style="display: @(IsCollapsed ? "none" : "block")">
+        @foreach (var service in Services)
+        {
+            <div class="p-4 bg-white shadow-md rounded-lg">
+                <div class="text-gray-600 mb-2 text-lg font-semibold">@service.ServiceType</div>
+                <div class="flex justify-between text-gray-500 text-sm">
+                    <div class="font-medium">Lifetime:</div>
+                    <div class="font-semibold">@service.Lifetime</div>
+                </div>
+                <div class="flex justify-between text-gray-500 text-sm">
+                    <div class="font-medium">Implementation Type:</div>
+                    <div class="font-semibold">@service.ImplementationType</div>
+                </div>
             </div>
-            <div class="flex justify-between text-gray-500 text-sm">
-                <div class="font-medium">Implementation Type:</div>
-                <div class="font-semibold">@service.ImplementationType</div>
-            </div>
-        </div>
-    }
+        }
+    </div>
 </div>
 
 @code {
     [Parameter]
+    public string Title { get; set; } = string.Empty;
+
+    [Parameter]
     public List<ServiceDescriptor> Services { get; set; } = new List<ServiceDescriptor>();
+
+    private bool IsCollapsed { get; set; } = true;
+
+    private void ToggleCollapse()
+    {
+        IsCollapsed = !IsCollapsed;
+    }
 }
