--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/Services.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/Services.razor
@@ -1,8 +1,12 @@
 ﻿@namespace TimeWarp.Architecture.Pages
+@inherits BaseComponent
 
-<h1 class="text-xl font-bold">Registered Services</h1>
-
-<ServiceList Title="IPipelineBehavior" Services=IPipelineBehaviors />
-<ServiceList Title="IRequestPreProcessor" Services=IRequestPreProcessors />
-<ServiceList Title="IRequestPostProcessor" Services=IRequestPostProcessors />
-<ServiceList Title="IStreamPipelineBehavior" Services=IStreamPipelineBehaviors />
+<PageComponent>
+    <HeaderContent>Middleware Services</HeaderContent>
+    <MainContent>
+        <ServiceList Title="IPipelineBehavior" Services=IPipelineBehaviors />
+        <ServiceList Title="IRequestPreProcessor" Services=IRequestPreProcessors />
+        <ServiceList Title="IRequestPostProcessor" Services=IRequestPostProcessors />
+        <ServiceList Title="IStreamPipelineBehavior" Services=IStreamPipelineBehaviors />
+    </MainContent>
+</PageComponent>
