--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/PageComponent.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/PageComponent.razor
@@ -9,13 +9,13 @@
 
     @if (HeaderContent != null)
     {
-        <header class="bg-white shadow" data-qa="HomeHeader">
-            <div class="px-4 py-6 mx-auto max-w-7xl sm:px-6 lg:px-8">
-                <h1 class="text-3xl font-bold leading-tight text-gray-900">
-                    @HeaderContent
-                </h1>
-            </div>
-        </header>
+    <header class="bg-white shadow" data-qa="HomeHeader">
+      <div class="px-4 py-6 mx-auto max-w-7xl sm:px-6 lg:px-8">
+        <h1 class="text-3xl font-bold leading-tight text-gray-900">
+          @HeaderContent
+        </h1>
+      </div>
+    </header>
     }
 
     <main class="grow">
@@ -32,13 +32,10 @@
             }
         </div>
     </main>
-    @if (SiteFooterContent != null)
+
+    @if (ShowFooter)
     {
-        @SiteFooterContent
-    }
-    else
-    {
-        <SiteFooter />
+      <SiteFooter CustomContent=CustomSiteFooterContent />
     }
 </div>
 
