--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/LoginPage/LoginPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/LoginPage/LoginPage.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
-<PageComponent>
+<StackedPage>
   <HeaderContent>Login Page</HeaderContent>
   <MainContent>
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
@@ -21,4 +21,4 @@
       </div>
     </div>
   </MainContent>
-</PageComponent>
+</StackedPage>
