--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
@@ -2,7 +2,7 @@
 @inherits BaseComponent
 
 <PageTitle>TimeWarp.Architecture Chat</PageTitle>
-<PageComponent>
+<StackedPage>
     <HeaderContent>Chat</HeaderContent>
     <MainContent>
         <div class="form-group">
@@ -24,6 +24,6 @@
             }
         </ul>
     </MainContent>
-</PageComponent>
+</StackedPage>
 
 
