--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -2,7 +2,7 @@
 @inherits BaseComponent
 <PageTitle>Counter Page</PageTitle>
 
-<PageComponent>
+<StackedPage>
   <HeaderContent>Counter Page</HeaderContent>
   <MainContent>
     <h1 class="text-2xl font-bold leading-tight text-gray-900">Counter Display 1</h1>
@@ -26,4 +26,4 @@
       Increment Count by 7 via JavaScript Interop
     </Button>
   </MainContent>
-</PageComponent>
+</StackedPage>
