--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
@@ -3,10 +3,10 @@
 @inherits BaseComponent
 <PageTitle>Event Stream Page</PageTitle>
 
-<PageComponent>
+<StackedPage>
   <HeaderContent>Event Stream Page</HeaderContent>
   <MainContent>
     <SimpleAlert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</SimpleAlert>
     <EventStream />
   </MainContent>
-</PageComponent>
+</StackedPage>
