--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/SuperheroPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/SuperheroPage.razor
@@ -1,7 +1,7 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
-<PageComponent>
+<StackedPage>
   <HeaderContent>Superheros</HeaderContent>
   <MainContent>
     @if (SuperheroState.Superheros == null)
@@ -36,5 +36,5 @@
     }
 
   </MainContent>
-</PageComponent> 
+</StackedPage> 
 
