--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemPage.razor
@@ -1,10 +1,10 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
-<PageComponent>
+<StackedPage>
   <HeaderContent>
     Todo Item @TodoItemId
   </HeaderContent>
   <MainContent>
     <TodoItemFormContainer/>
   </MainContent>
-</PageComponent>
+</StackedPage>
