--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemsPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemsPage.razor
@@ -1,11 +1,11 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
-<PageComponent>
+<StackedPage>
     <HeaderContent>
         Todo Item List
     </HeaderContent>
     <MainContent>
         <TodoItemList />
     </MainContent>
-</PageComponent>
+</StackedPage>
 
