--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
-<PageComponent>
+<StackedPage>
   <HeaderContent>Profile Page</HeaderContent>
-</PageComponent>
+</StackedPage>
