--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
@@ -2,12 +2,13 @@
 @inherits BaseComponent
 
 <footer class="bg-white">
-  @if (SiteFooterContent != null)
+  @if (CustomContent is not null)
   {
-    @SiteFooterContent
+    @CustomContent
   }
   else
   {
+    <!-- Default Footer -->
     <div class="max-w-screen-xl px-4 py-4 mx-auto sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
       <BlazorLocation TestId="BlazorLocation" />
       <div>
