--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
@@ -1,5 +1,17 @@
-﻿@page "/test"
+﻿@namespace TimeWarp.Architecture.Pages
 
-<div>YO YO Before</div>
-<TimeWarp.Architecture.Components.Pages.Tailwind.DesktopSidebar />
-<div>YO YO After</div>
+<SideBarPage>
+    <MainContent>
+        <div class="relative grow overflow-hidden rounded-xl border border-dashed border-gray-400 opacity-75">
+            <svg class="absolute inset-0 h-full w-full stroke-gray-900/10" fill="none">
+                <defs>
+                    <pattern id="pattern-1526ac66-f54a-4681-8fb8-0859d412f251" x="0" y="0" width="10" height="10" patternUnits="userSpaceOnUse">
+                        <path d="M-3 13 15-5M-5 5l18-18M-1 21 17 3"></path>
+                    </pattern>
+                </defs>
+                <rect stroke="none" fill="url(#pattern-1526ac66-f54a-4681-8fb8-0859d412f251)" width="100%" height="100%"></rect>
+            </svg>
+        </div>
+    </MainContent>
+</SideBarPage>
+
