--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuPanel.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuPanel.razor
@@ -1,6 +1,6 @@
 ﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 
-<div class="py-1 bg-white rounded-md shadow-xs" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+<div class="py-1 bg-white rounded-md shadow-xs ring-1 ring-gray-900/5" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
   <ProfileMenuNavLink href=@ProfilePage.GetPageUrl() role="menuitem">Your Profile</ProfileMenuNavLink>
   <ProfileMenuNavLink href=@SettingsPage.GetPageUrl() role="menuitem">Settings</ProfileMenuNavLink>
   <ProfileMenuNavLink href=@LogoutPage.GetPageUrl() role="menuitem">Sign out</ProfileMenuNavLink>
