Logo now is just the image with no wrapper div

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/Logo.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/Logo.razor
@@ -1,7 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @inherits BaseComponent
 
-<div class="flex-shrink-0">
-  <img class="block lg:hidden h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo">
-  <img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo">
-</div>
+<img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo" @attributes=Attributes>
+
