--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SideBar/SideBarPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SideBar/SideBarPage.razor
@@ -1,20 +1,30 @@
-﻿<div class="h-full">
-  <div class="relative z-50 lg:hidden" role="dialog" aria-modal="true">
-    Off-canvas menu for mobile, show/hide based on off-canvas menu state.
-  </div>
+﻿@namespace TimeWarp.Architecture.Components
+@inherits BaseComponent
+
+<div class="h-full">
+  <SidebarMobileMenu />
   <!-- Static sidebar for desktop hidden by default visible on lg and up -->
   <div class="hidden lg:block lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
-    <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-gray-900 px-6 pb-4">
-      <Sidebar/>
-    </div>
+    <Sidebar />
   </div>
-  <div class="min-h-screen lg:pl-72 lg:flex lg:flex-col">
-    <HeaderBar/>
+  <div class="min-h-screen flex flex-col lg:pl-72 lg:flex lg:flex-col">
+    <HeaderBar />
     <main class="py-10 px-4 sm:px-6 lg:px-8 grow flex flex-col ">
       @MainContent
     </main>
     <footer>
-      <SiteFooter/>
+      <SiteFooter />
     </footer>
   </div>
 </div>
+
+<!-- Absolute Position Items -->
+@if (ModalContent != null)
+{
+  <ModalController ActiveModalId=@ActiveModalId>
+    <ModalContainers>
+      @ModalContent
+    </ModalContainers>
+  </ModalController>
+}
+<!-- End Absolute Position Items -->
