--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
@@ -9,9 +9,9 @@
   else
   {
     <!-- Default Footer -->
-    <div class="max-w-screen-xl px-4 py-4 mx-auto sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
+    <div class="max-w-screen-xl px-4 py-4 mx-auto sm:px-6 sm:flex sm:items-center sm:justify-between lg:px-8">
       <BlazorLocation TestId="BlazorLocation" />
-      <div>
+      <div >
         @if (IsProcessing)
         {
           <div
