size the hamburger button

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SideBar/HamburgerButton.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SideBar/HamburgerButton.razor
@@ -7,5 +7,5 @@
   aria-label="Open sidebar"
   @attributes=Attributes
 >
-  <TimeWarp.HeroIcons.Outline.Bars3Icon />
+  <TimeWarp.HeroIcons.Outline.Bars3Icon class="h-6 w-6"/>
 </button>
